test/bad/loops/spread01.px

for _ in ...[0] do
    skip
